# arrakis

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  1_cutout.py  2_unresolved.py  CHANGELOG.md  MANIFEST.in  README.md  cubes.py  cutout.py  cutouts.ipynb  environment.yml  noxfile.py  pyproject.toml  pyproject.toml.bak  query.ipynb  queryracs.py  requirements.txt  rmsynth.pbs  rmsynth_test.ipynb  run_rmsynth_oncuts.py  selavy.in.template  selavy.sbatch.template  selavy_beam08_restored.sbatch  selavy_spice_test.sbatch  setup.py  spicepol.ipynb  test_config.txt  thumbnails.ipynb  unresolved.py  upython
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  main.yml  mirror.yml  python-app.yml  python-package-conda.yml
arrakis/: .default_config.cfg  .default_config.txt  .default_config.yaml  __init__.py  cleanup.py  columns_possum.py  cutout.py  fix_ms_corrs.py  fix_ms_dir.py  fix_ms_rot.py  frion.py  imager.py  init_database.py  json.py  linmos.py  logger.py  makecat.py  merge_fields.py  process_region.py  process_spice.py  rmclean_oncuts.py  rmsynth_oncuts.py  utils.py  validate.py  wsclean_rmsynth.py
arrakis/configs/: default.yaml  magnus.yaml  petrichor.yaml  rm_petrichor.yaml
arrakis/data/: __init__.py
arrakis/offsets/: racs_epoch_1_offsets.csv  racs_epoch_7_offsets.csv
arrakis/utils/: __init__.py  coordinates.py  database.py  exceptions.py  fitsutils.py  fitting.py  io.py  json.py  meta.py  msutils.py  pipeline.py  plotting.py  typing.py
configs/: default.yaml  galaxy.yaml  magnus.yaml
dask/: jobqueue.yaml
docs/: requirements.txt
docs/source/: acknowledge.rst  changelog.rst  conf.py  flow.mmd  imaging.rst  index.rst  install.rst  parallel.rst  pipeline.rst  start.rst
docs/source/autoapi/: index.rst
docs/source/autoapi/scripts/: index.rst
docs/source/autoapi/scripts/casda_prepare/: index.rst
docs/source/autoapi/scripts/check_cutout/: index.rst
docs/source/autoapi/scripts/compare_leakage/: index.rst
docs/source/autoapi/scripts/compute_leakage/: index.rst
docs/source/autoapi/scripts/copy_cutouts/: index.rst
docs/source/autoapi/scripts/copy_cutouts_askap/: index.rst
docs/source/autoapi/scripts/copy_data/: index.rst
docs/source/autoapi/scripts/find_row/: index.rst
docs/source/autoapi/scripts/find_sbid/: index.rst
docs/source/autoapi/scripts/make_links/: index.rst
docs/source/autoapi/scripts/spica/: index.rst
docs/source/autoapi/spiceracs/: index.rst
docs/source/autoapi/spiceracs/__version__/: index.rst
docs/source/autoapi/spiceracs/cleanup/: index.rst
docs/source/autoapi/spiceracs/columns_possum/: index.rst
docs/source/autoapi/spiceracs/cutout/: index.rst
docs/source/autoapi/spiceracs/frion/: index.rst
docs/source/autoapi/spiceracs/init_database/: index.rst
docs/source/autoapi/spiceracs/linmos/: index.rst
docs/source/autoapi/spiceracs/makecat/: index.rst
docs/source/autoapi/spiceracs/merge_fields/: index.rst
docs/source/autoapi/spiceracs/processSPICE/: index.rst
docs/source/autoapi/spiceracs/process_region/: index.rst
docs/source/autoapi/spiceracs/process_spice/: index.rst
docs/source/autoapi/spiceracs/rmclean_oncuts/: index.rst
docs/source/autoapi/spiceracs/rmsynth_oncuts/: index.rst
docs/source/autoapi/spiceracs/utils/: index.rst
licenses/: LICENSE_distributed.txt  flint.txt
notebooks/: Untitled.ipynb  moments.ipynb  polhist.ipynb  query.ipynb  rmsynth_test.ipynb  spectral_index.ipynb
process/: polfind.py  rmsynth_oncuts.py  unresolved.py
racs_db/journal/: WiredTigerTmplog.0000000001
scripts/: casda_prepare.py  check_cutout.py  compare_leakage.py  compute_leakage.py  copy_cutouts.py  copy_cutouts_askap.py  copy_data.py  create_mongodb.py  find_row.py  find_sbid.py  fix_dr1_cat.py  fix_src_cat.py  hello_mpi_world.py  helloworld.py  make_dr2_config.py  make_links.py  spica.py  tar_cubelets.py
spiceracs/: .default_config.txt  __init__.py  __init__.py.~1~  __version__.py  au2.py  beamcon.py  check_cutout.py  cleanup.py  columns_possum.py  cutout.py  cutout_rolling.py  fix_ms_dir.py  frion.py  get_seps.py  imager.py  init_database.py  leakage.py  linmos.py  logger.py  makecat.py  merge_fields.py  mergetab.py  moments.py  moments_oncuts.py  polfind.py  processSPICE.py  process_region.py  process_spice.py  rmclean_oncuts.py  rmsynth_oncuts.py  unresolved.py  utils.py  wsclean_rmsynth.py
spiceracs/configs/: galaxy.yaml  magnus.yaml  petrichor.yaml
spiceracs/scripts/: casda_prepare.py  check_cutout.py  compare_leakage.py  compute_leakage.py  copy_cutouts.py  copy_cutouts_askap.py  copy_data.py  find_row.py  find_sbid.py  fix_dr1_cat.py  helloworld.py  make_links.py  spica.py  spice_script.py
submit/: backup.sh  casda_pre_prep.sh  casda_prep_test.sh  casda_prepare.sh  cat_all_spica.sh  convolve.sbatch  cutout.sbatch  cutout_rolling.sh  cutout_zeus.sh  cutout_zeus_rolling.sh  cutoutpearcey.sbatch  cutouttest.sbatch  makecat.sbatch  momenttest.pbs  momenttest.sbatch  polfindtest.pbs  processRegion.sbatch  processSPICE.sbatch  process_reSPICE.sh  process_single.sh  rmclean.sbatch  rmpipe.sbatch  rmsynth.pbs  rmsynth.sbatch  run_all_spica.sh  run_all_spica_array.sh  selavy_spice_test.in  selavy_spice_test.pbs  smooth.sh  submit_selavy.py  test_image.py
tests/: cli_test.py  function_tests.py  import_test.py  init_test.py  test_cli.py  test_init.py  unit_test.py
tests/data/: gaussians_RACS_1237+12A_3165.fits  source_RACS_1237+12A_3165.fits
